--- a/public/assets/scss/styles.scss
+++ b/public/assets/scss/styles.scss
@@ -10,12 +10,11 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
   color: $primary-color;
 }
 
 #particle-canvas {
-  position: absolute !important;
+  position: fixed !important;
   z-index: -1;
   top: 0;
   width: 100%;
