--- a/public/assets/scss/_browse.scss
+++ b/public/assets/scss/_browse.scss
@@ -5,7 +5,7 @@ ul.algorithm-selection {
   padding: 0;
   li {
     border: 4px solid $primary-color;
-    width: 130px;
+    width: 160px;
     height: 100px;
     display: inline-block;
     margin: 0 10px 10px 0;
@@ -32,12 +32,13 @@ ul.algorithm-selection {
 
 div.tags {
   display: inline-block;
+  padding-top: 7px;
   span {
     display: inline-block;
     padding: 7px 14px;
     border: 1px solid $primary-color;
     border-radius: 20px;
-    margin-left: 7px;
+    margin: 0 0 7px 7px;
     cursor: pointer;
     &.active {
       background-color: white;
